--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -161,9 +161,10 @@ $font-size-hero-slider-title:   24;
 $font-size-hero-slider-text:	18;
 $font-size-hero-slider-copyright: 14;
 $font-size-textbuttons:		14;
-
-
-
+$font-size-h3-contentmenu:	16;
+$font-size-linkicon:		13;
+$font-size-content-linkicon:	10;
+$font-size-content-listitem:	15;
 
 // Define breakpoints
 
@@ -193,7 +194,7 @@ $screen-xxl-min:    $screen-xxl;
 
 $container-lg:	    970px;
 $container-xl:	    1100px;
-$container-xxl:	    1400px;	 
+$container-xxl:	    1200px;	 
 
 // Bootstrap Adjustments
 $fau-gutter-width:	30px;
