--- a/css/sass/elements/_lists.scss
+++ b/css/sass/elements/_lists.scss
@@ -4,10 +4,9 @@
 
 
 li {
-	padding: 3px 0 4px 4px;
-	font-size: 15px;
-	line-height: 22px;
-	color: $colorText;
+    padding: 3px 0 4px 4px;
+    @include px2rem($font-size-content-listitem);  
+    color: $colorText;
 	
     .sidebar-inline & {
 	padding: 3px 0 4px 20px;
@@ -85,6 +84,9 @@ ol {
 		}
 	}
 }
+
+
+
 
 
 @media (max-width: $breakMD) {
