--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -166,6 +166,11 @@ $font-size-linkicon:		13;
 $font-size-content-linkicon:	10;
 $font-size-content-listitem:	15;
 
+
+$font-size-content-meta:	14;
+$font-size-pagination-h3:	$font-size-content-meta;
+$font-size-pagination-links:	$font-size-content-meta;
+
 // Define breakpoints
 
 // iPhone 3G
