--- a/css/sass/elements/_elements.scss
+++ b/css/sass/elements/_elements.scss
@@ -15,6 +15,9 @@
 // Lists
 @import "lists";
 
+//  Pagination
+@import "pagination";
+
 // Forms
 @import "forms";
 
@@ -29,6 +32,8 @@
 
 // Images
 @import "images";
+
+
 
 // General Classes
 @import "general-classes";
