- debugmode off für eine einzelne person, die was wissen will ;)

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -8,7 +8,7 @@
  // DEBUGMODE
  // (Sets border around container and main regions)
     
-$debugmode: 'true';
+$debugmode: 'false';
 
 
 // Define fonts
