--- a/css/sass/structure/_meta.scss
+++ b/css/sass/structure/_meta.scss
@@ -44,8 +44,6 @@
 
 .meta-links {
     padding: 1px 0;
-    height: 40px;
-    overflow: hidden;
     
     .ext-link  {
 	    padding-right: 0 !important;
@@ -56,6 +54,11 @@
 	overflow: visible;
 	height: auto;
     }
+    
+    @media (min-width: $screen-sm + 1) {
+	height: 40px;
+	overflow: hidden;
+    }
 }
 
 
@@ -63,70 +66,82 @@
     display: inline-block;
     
     .searchform {
-		border: none;
-		margin: 0;
-		padding: 5px 0;
-		
-		input[type="text"] {
-			@include border-radius(20px);
-			padding: 5px 35px 5px 10px;
-			width: 100px;
-			background: $colorMeta;
-			border: none;
-			outline: none;
-			color: #fff;
-			height: 30px;
-			display: inline-block;
-			margin-right: -25px;
-			margin-bottom: 0px;
-			&:focus {
-				background-color: $colorMetaHover;
-			}
-			
-			@media (min-width: $screen-md +1) {
-			    width: 120px;
-			    padding: 5px 35px 5px 35px;
-			}
-			@media (min-width: $screen-lg) {
-			    width: 160px;
-			}
+	    border: none;
+	    margin: 0;
+	    padding: 5px 0;
 
-		}
-		
-		input[type="submit"] {
-			@include border-radius(20px);
-			position: relative;
-			z-index: 100;
-			height: 30px;
-			padding: 0 12px;
-			font-weight: bold;
-			border: none;
-			outline: none;
-			color: $colorMeta;
-			background: #fff;
-			display: inline-block;
-			
-			&:hover, &:focus {
-				background: $colorMetaLightest;
-				@include box-shadow(0 0 5px rgba(0,0,0,0.2));
-			}
-		}
-		
-		label {
-			@extend .screen-reader-text;		
-		}
-		.searchicon {
-		    @extend .fa;
-		    @extend .fa-search;
-		    position: relative;
-		    margin-right: -30px;
+	    input[type="text"] {
+		    @include border-radius(20px);
+		    padding: 5px 35px 5px 10px;
+		    width: 160px;
+		    background: $colorMeta;
+		    border: none;
+		    outline: none;
 		    color: #fff;
-		    
-		    @media (max-width: $screen-md) {
-			  display: none;
+		    height: 30px;
+		    display: inline-block;
+		    margin-right: -25px;
+		    margin-bottom: 0px;
+		    &:focus {
+			    background-color: $colorMetaHover;
 		    }
+
+		    @media (min-width: $screen-md +1) {
+			padding: 5px 35px 5px 35px;
+		    }
+		    @media (min-width: $screen-lg) {
+			width: 160px;
+		    }
+
+	    }
+
+	    input[type="submit"] {
+		    @include border-radius(20px);
+		    position: relative;
+		    z-index: 100;
+		    height: 30px;
+		    padding: 0 12px;
+		    font-weight: bold;
+		    border: none;
+		    outline: none;
+		    color: $colorMeta;
+		    background: #fff;
+		    display: inline-block;
+
+		    &:hover, &:focus {
+			    background: $colorMetaLightest;
+			    @include box-shadow(0 0 5px rgba(0,0,0,0.2));
+		    }
+	    }
+
+	    label {
+		    @extend .screen-reader-text;		
+	    }
+	    .searchicon {
+		@extend .fa;
+		@extend .fa-search;
+		position: relative;
+		margin-right: -30px;
+		color: #fff;
+
+		@media (max-width: $screen-md) {
+		      display: none;
 		}
+	    }
+    }
+
+    @media (max-width: $screen-sm) {
+	position: absolute;
+	top: 10px;
+	right: 15px;
+	.admin-bar & {
+	    top: 56px;
 	}
+	
+	z-index: 101;
+	
+	
+    }
 }
 .meta-widget {
     display: inline-block;
@@ -144,7 +159,7 @@
     } 
     .js {
 	#meta {
-	    padding-top: 70px;	    
+	    padding: 0;	    
 	    ul {
 		margin: 0;
 	    }
@@ -152,11 +167,11 @@
 		width: 100px;
 	    }
 	}
-	.admin-bar #meta {
-	    padding-top: 40px;		
-	}
+	
     }
-
+    
+    
+    
 }
 
 @media (max-width: $breakSM) {
